--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
 <style>
 
 .main {
-    width: 36%;
-    margin-left: 32%;
-    background: #0F0F0F;
+    width: 40%;
+    margin-left: 30%;
+    background: #1F1F1F;
     color: #DEDEDE;
+    background-image: url(./bg_top.png);
+    background-repeat: no-repeat;
 }
 
 a {
@@ -18,6 +20,7 @@ a {
 
 .section-header {
     text-align: center;
+    margin-top: 8%;
 }
 
 .ref-link {
@@ -29,19 +32,29 @@ a {
 </head>
 
 <body class="main">
-<h1 class="section-header">Welcome to Angouri</h1>
+<h1 class="section-header" style="margin-top: 20vh; min-top: 20vh">Angouri</h1>
 
-It is an organization for open-source software enthusiasts. We genuinely think that OSS is our real bright future.
+It is an organization for open-source software enthusiasts. We genuinely think that OSS is our real bright future. <a href="https://github.com/asc-community">GitHub</a>
 
 <h2 class="section-header">Our projects</h2>
 
 <a href="https://am.angouri.org" class="ref-link">AngouriMath</a>
+(<a href="https://github.com/asc-community/AngouriMath">GitHub</a>)
+
 · <a href="https://mx.angouri.org" class="ref-link">MxEngine</a>
+(<a href="https://github.com/asc-community/MxEngine">GitHub</a>)
 
-<h2 class="section-header">Personal blogs</h2>
 
-<a href="https://momodeve.angouri.org" class="ref-link">MomoDeve</a>
-· <a href="https://wbg.angouri.org" class="ref-link">WhiteBlackGoose</a>
+<h2 class="section-header">About Angouri's people</h2>
+
+MomoDeve
+(<a href="https://momodeve.github.io">website</a>, <a href="https://github.com/MomoDeve">GitHub</a>)
+
+·
+WhiteBlackGoose 
+(<a href="https://github.com/WhiteBlackGoose">GitHub</a>, <a href="https://twitter.com/WhiteBlackGoose">Twitter</a>)
+
+
 
 </body>
 
