--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     margin-left: 30%;
     background: #1F1F1F;
     color: #DEDEDE;
-    background-image: url(./bg_top.png);
+    /*background-image: url(./bg_top.png);*/
     background-repeat: no-repeat;
     font-size: 16pt;
     font-family: monospace;
@@ -46,7 +46,7 @@ a {
 </head>
 
 <body class="main">
-<h1 class="section-header" style="margin-top: 20vh; min-top: 20vh">Angouri</h1>
+<h1 class="section-header" style="margin-top: 9vh; min-top: 9vh">Angouri</h1>
 
 It is an organization for open-source software enthusiasts. We genuinely think that OSS is our real bright future. There is no requirement to start contributing to our projects. Moreover, by contributing to them, you contribute to humanity.
 <br>
