--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ a {
 }
 
 .link-block {
-    margin-top: 0.7vh;
+    margin-top: 0.9vh;
     margin-bottom: 0.7vh;
 }
 
@@ -46,35 +46,39 @@ a {
 </head>
 
 <body class="main">
-<h1 class="section-header" style="margin-top: 9vh; min-top: 9vh">Angouri</h1>
-
+<h1 class="section-header" style="margin-top: 6vh; min-top: 6vh">Angouri</h1>
+<div class="block">
 It is an organization for open-source software enthusiasts. We genuinely think that OSS is our real bright future. There is no requirement to start contributing to our projects. Moreover, by contributing to them, you contribute to humanity.
 <br>
 <div class="link-block">
-<a href="https://github.com/asc-community">GitHub</a> ·
-<a href="https://discord.gg/VWwtVdsRMp">Discord</a>
+<a href="#projects">Projects</a> ·
+<a href="#people">People</a> ·
+<a href="https://discord.gg/VWwtVdsRMp">Discord</a> ·
+<a href="https://github.com/asc-community">GitHub</a>
+</div>
 </div>
 
 <br>
 <hr>
 
-<h2 class="section-header">Our projects</h2>
+<h2 class="section-header"><a name="projects"></a>Our projects</h2>
 
 <div class="block">
     <h3>AngouriMath</h3>
     <a name="angourimath"></a>
-    AngouriMath is a computer algebra library for basic and complex expression manipulation, be that arithmetic, calculus, or printing in LaTeX, parsing from string, and many more. It might be convenient to use in industrial spheres thanks to such features as the ability to interrupt a computation.
+    AngouriMath is a computer algebra library for basic and complex expression manipulation, be that arithmetic, calculus, or printing in LaTeX, parsing from string, and many more. It might be convenient to use in industrial spheres thanks to computation interruption and F# wrapper.
     <br>
     <div class="link-block">
     <a href="https://am.angouri.org">Website</a> ·
-    <a href="https://github.com/asc-community/AngouriMath">GitHub</a>
+    <a href="https://github.com/asc-community/AngouriMath">GitHub</a> ·
+    <a href="https://www.patreon.com/AngouriMath">Patreon</a>
     </div>
 </div>
 
 <div class="block">
     <h3>MxEngine</h3>
     <a name="mxengine"></a>
-    MxEngine is an educational modern-C++ general-purpose 3D game engine. Right now MxEngine is developed only by me, <a href="https://github.com/MomoDeve">#Momo</a>, but any contributions are welcome and will be reviewed. Fow now MxEngine supports OpenGL as graphic API and targeting x64 only.
+    MxEngine is an educational modern-C++ general-purpose 3D game engine. Right now MxEngine is developed only by <a href="https://github.com/MomoDeve">#Momo</a>, but any contributions are welcome and will be reviewed. Fow now MxEngine supports OpenGL as graphic API and targeting x64 only.
     <br>
     <div class="link-block">
     <a href="https://github.com/asc-community/MxEngine">GitHub</a>
@@ -114,29 +118,65 @@ It is an organization for open-source software enthusiasts. We genuinely think t
 <br>
 <hr>
 
-<h2 class="section-header">About Angouri's people</h2>
-
-<div class="block">
-    <h3>MomoDeve</h3>
-    <a name="momodeve"></a>
-    I’ve been programming C++ and C# for around three years, mainly working on MxEngine game engine during the last year.
-    <br>
-    <div class="link-block">
-    <a href="https://momodeve.github.io/">Website</a> ·
-    <a href="https://github.com/MomoDeve">GitHub</a>
-    </div>
-</div>
+<h2 class="section-header"><a name="people"></a>About Angouri's people</h2>
 
 <div class="block">
     <h3>WhiteBlackGoose</h3>  
     <a name="whiteblackgoose"></a>
-    I mainly work on our symbolic algebra library <a href="https://am.angouri.org/">AngouriMath</a> (under MIT). I also created a generic tensor library <a href="https://github.com/asc-community/GenericTensor">GenericTensor</a>. I'm also <a href="https://github.com/MomoDeve">MomoDeve</a>'s friend.
+    I mainly work on our symbolic algebra library <a href="https://am.angouri.org/">AngouriMath</a> (under MIT). I also created a generic tensor library <a href="https://github.com/asc-community/GenericTensor">GenericTensor</a>. I'm also <a href="https://github.com/MomoDeve">MomoDeve</a>'s friend. I'm Oryp4ik#0120 on Discord.
     <br>
     <div class="link-block">
     <a href="https://twitter.com/WhiteBlackGoose">Twitter</a> ·
     <a href="https://github.com/WhiteBlackGoose">GitHub</a> ·
     <a href="mailto:whiteblackgoose@asc-community.org">E-Mail</a>
     </div>
+</div>
+
+<div class="block">
+    <h3>MomoDeve</h3>
+    <a name="momodeve"></a>
+    I’ve been programming C++ and C# for around three years, mainly working on <a href="https://github.com/asc-community/MxEngine">MxEngine</a> game engine during the last year. My previous experience also include my own programming language - <a href="https://github.com/MomoDeve/MSL">MSL</a> (bison parser + custom bytecode + own VM) and mono runtime binder for C++ - <a href="https://github.com/asc-community/monobind">monobind</a>.
+    <br>
+    <div class="link-block">
+    <a href="https://momodeve.github.io/">Website</a> ·
+    <a href="https://github.com/MomoDeve">GitHub</a> ·
+    <a href="https://habr.com/ru/users/MomoDev/">Habr</a>
+    </div>
+</div>
+
+<div class="block">
+    <h3>HappyPig375</h3>
+    <a name="happypig375"></a>
+    I've been enjoying .NET since 2014, from VB.NET, then C#, now F#. I believe in automation through programming, specifically automating answering school math for checking, where <a href="https://am.angouri.org">AngouriMath</a> and <a href="https://github.com/verybadcat/CSharpMath">CSharpMath</a> make the most intuitive calculator app ever. However, with other commitments, like <a href="http://www.bm.ust.hk/isom/programs-n-courses/ug-programs/bba-in-is/overview">University studies</a>, <a href="https://www.ictinpe.org">a startup</a>, paid open source, and unpaid open source, excuse me for not contributing much. I'm Happypig375#2425 on Discord.
+    <br>
+    <div class="link-block">
+    <a href="https://github.com/Happypig375">GitHub</a> ·
+    <a href="https://www.reddit.com/user/Happypig375">Reddit</a> ·
+    <a href="https://t.me/Happypig375">Telegram</a> ·
+    <a href="mailto:hadrianwttang@gmail.com">E-Mail</a>
+    
+    </div>
+</div>
+
+<div class="block">
+    <h3>TheSeems</h3>
+    <a name="theseems"></a>
+    Java developer loving C#, C++, Python and Go, mainly work on backends, frameworks, bots.
+    <br>
+    <div class="link-block">
+    <a href="https://theseems.ru">Website</a> ·
+    <a href="https://github.com/theseems">GitHub</a> ·
+    <a href="https://t.me/theseems">Telegram</a>
+    </div>
+</div>
+
+<br>
+<hr>
+
+<h2 class="section-header">Contributions</h2>
+
+<div class="block">
+Anyone is more than welcomed to make contributions to any Angouri's projects. Join our <a href="https://discord.gg/VWwtVdsRMp">Discord</a> server to know about our current plans and tasks. Fork the repository of the project you want to work on, commit your changes, and make a pull request.
 </div>
 
 </body>
