--- a/index.html
+++ b/index.html
@@ -7,14 +7,22 @@
 <style>
 
 .main {
-    width: 40%;
-    margin-left: 30%;
     background: #1F1F1F;
     color: #DEDEDE;
     /*background-image: url(./bg_top.png);*/
     background-repeat: no-repeat;
     font-size: 16pt;
     font-family: monospace;
+    width: 40%;
+    margin-left: 30%;
+}
+
+@media (max-width: 800px)
+{
+    .main {
+        width: 66%;
+        margin-left: 17%;
+    }
 }
 
 a {
