star counter added

--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@ It is an organization for open-source software enthusiasts. We genuinely think t
 <a href="https://discord.gg/VWwtVdsRMp">Discord</a> ·
 <a href="https://github.com/asc-community">GitHub</a>
 </div>
+
 </div>
 
 <br>
@@ -200,6 +201,8 @@ It is an organization for open-source software enthusiasts. We genuinely think t
 
 <div class="block">
 Anyone is more than welcomed to make contributions to any Angouri's projects. Join our <a href="https://discord.gg/VWwtVdsRMp">Discord</a> server to know about our current plans and tasks. Fork the repository of the project you want to work on, commit your changes, and make a pull request.
+<br><br><br>
+<img src="https://img.shields.io/github/stars/asc-community?label=Total%20stars%3A&style=flat-square&color=gray">
 </div>
 
 </body>
