--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ It is an organization for open-source software enthusiasts. We genuinely think t
     <div class="link-block">
     <a href="https://twitter.com/WhiteBlackGoose">Twitter</a> ·
     <a href="https://github.com/WhiteBlackGoose">GitHub</a> ·
-    <a href="mailto:whiteblackgoose@asc-community.org">E-Mail</a>
+    <a href="mailto:wbg@angouri.org">E-Mail</a>: wbg@angouri.org
     </div>
 </div>
 
@@ -177,7 +177,7 @@ It is an organization for open-source software enthusiasts. We genuinely think t
     <a href="https://github.com/Happypig375">GitHub</a> ·
     <a href="https://www.reddit.com/user/Happypig375">Reddit</a> ·
     <a href="https://t.me/Happypig375">Telegram</a> ·
-    <a href="mailto:hadrianwttang@gmail.com">E-Mail</a>
+    <a href="mailto:hadrianwttang@gmail.com">E-Mail</a>: hadrianwttang@gmail.com
     
     </div>
 </div>
