--- a/index.html
+++ b/index.html
@@ -19,52 +19,7 @@
 <noscript><div><img src="https://mc.yandex.ru/watch/72666112" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
 <!-- /Yandex.Metrika counter -->
 
-<style>
-
-.main {
-    background: #1F1F1F;
-    color: #DEDEDE;
-    /*background-image: url(./bg_top.png);*/
-    background-repeat: no-repeat;
-    font-size: 16pt;
-    font-family: monospace;
-    width: 40%;
-    margin-left: 30%;
-}
-
-@media (max-width: 1000px)
-{
-    .main {
-        width: 66%;
-        margin-left: 17%;
-    }
-}
-
-a {
-    color: pink;
-    text-decoration: none;
-}
-
-.section-header {
-    text-align: center;
-    margin-top: 8%;
-}
-
-.ref-link {
-    padding: 10px;
-}
-
-.block {
-    padding: 10px;
-    margin-bottom: 4vh;
-}
-
-.link-block {
-    margin-top: 0.9vh;
-    margin-bottom: 0.7vh;
-}
-
-</style>
+<link rel="stylesheet" href="styles.css">
 
 </head>
 
