email added, patreon removed

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ It is an organization for open-source software enthusiasts. We genuinely think t
     <div class="link-block">
     <a href="https://am.angouri.org">Website</a> ·
     <a href="https://github.com/asc-community/AngouriMath">GitHub</a> ·
-    <a href="https://www.patreon.com/AngouriMath">Patreon</a>
+    <a href="mailto:am@angouri.org">E-Mail: </a>am@angouri.org
     </div>
 </div>
 
