--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ It is an organization for open-source software enthusiasts. We genuinely think t
 
 <div class="block">
     <a name="happypig375"></a>
-    <h3>HappyPig375</h3>
+    <h3>Happypig375</h3>
     I've been enjoying .NET since 2014, from VB.NET, then C#, now F#. I believe in automation through programming, specifically automating answering school math for checking, where <a href="https://am.angouri.org">AngouriMath</a> and <a href="https://github.com/verybadcat/CSharpMath">CSharpMath</a> make the most intuitive calculator app ever. However, with other commitments, like <a href="http://www.bm.ust.hk/isom/programs-n-courses/ug-programs/bba-in-is/overview">University studies</a>, <a href="https://www.ictinpe.org">a startup</a>, paid open source, and unpaid open source, excuse me for not contributing much. I'm Happypig375#2425 on Discord.
     <br>
     <div class="link-block">
