--- a/index.html
+++ b/index.html
@@ -102,7 +102,10 @@ It is an organization for open-source software enthusiasts. We genuinely think t
 <div class="block">
     <a name="whiteblackgoose"></a>
     <h3>WhiteBlackGoose</h3>
-    I mainly work on our symbolic algebra library <a href="https://am.angouri.org/">AngouriMath</a> (under MIT). I also created a generic tensor library <a href="https://github.com/asc-community/GenericTensor">GenericTensor</a>. I'm also <a href="https://github.com/MomoDeve">MomoDeve</a>'s friend. I'm Oryp4ik#0120 on Discord.
+    I'm a big fan of OSS, and I created and contributed to a few open-source projects.
+    Currently, I'm working on <a href="https://am.angouri.org/">AngouriMath</a>. Sometimes
+    I write articles about techniques and features in symbolic math or C#. Reach me
+    on Discord: Oryp4ik#0120.
     <br>
     <div class="link-block">
     <a href="https://twitter.com/WhiteBlackGoose">Twitter</a> ·
